# waze-toll-tool-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md
prices/: alias.csv
prices/flat/: 2020_sanef-1,2,3,4.tsv  2021_sanef-1,2,3,4.tsv  2023_APRR-1,2,4,8.tsv  2023_AREA-2,4,6,10.tsv  2023_Cofiroute-3,6,7,11.tsv
prices/matrix/car/: 2023_ASF-A7-A9-A46-A54-A61-A62-A66-A75-page2-Car.tsv
prices/matrix/motorcycle/: 2023_ASF-A7-A9-A46-A54-A61-A62-A66-A75-page2-Motorcycle.tsv
prices/onedirmatrix/car/: 2022_ASF-A7-A9-A46-A54-A61-A62-A66-A75-page2-Car.tsv  2023_ASF-A89-A10-A19-A6-A77-A5-A26-A4-A31-A36-A39-A40-A42_page9-Car.tsv  ASF-A89-A71-A10-A85.tsv
prices/onedirmatrix/motorcycle/: 2022_ASF-A7-A9-A46-A54-A61-A62-A66-A75-page2-Motorcycle.tsv  2023_ASF-A89-A10-A19-A6-A77-A5-A26-A4-A31-A36-A39-A40-A42_page9-Motorcycle.tsv
prices/triangle/car/: 2020_ASF-A20.tsv  2022_A16 A29 A28-CLASSE1.tsv  2022_ASF-A10-A83-A837-A87-page-6-Car.tsv  2022_ASF-A89-CLERMONT-LYON-page8-Car.tsv  2022_ASF-A9-A61-A62-A66-A75-A709-page3-Car.tsv  (+12 more)
src/: admin.rs  category.rs  hash.rs  io_tools.rs  json.rs  main.rs  name_normalizer.rs  price.rs  price_service.rs  security.rs  toll_file.rs  user.rs  user_repository.rs
src/model/: mod.rs  status.rs  sync_data.rs  user.rs
src/price_grid/: currency.rs  flat_loader.rs  matrix_loader.rs  mod.rs  price_load_audit.rs  toll_file.rs  triangle_loader.rs
src/router/: admin.rs  mod.rs  roadwork.rs
src/service/: data_service.rs  mod.rs
src/toll_file/: matrix.rs  mod.rs  section.rs  segment.rs  toll.rs  toll_file.rs
src/user/: mod.rs  user_repository.rs
(+15 files in other folders)
