[package]
name = "roadwork_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
serde_json = "1.0.116"
#base64 = "0.21.4"
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }
axum-auth = "0.7.0"