[package]
name = "waze-toll-tool-rust"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.31"
enum-iterator = "2.1.0"
unidecode = "0.3.0"